Fix word counter, remove annoying countdown: update index.html, update script.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Word Repeat Notifier</title>
 </head>
 <body>
+  <a href="https://skalixur.github.io" class="website-link">← Website</a>
   <form class="essay-form" onsubmit="doStuff(); return false;" >
     <span class="heading">Paste your text in here: </span>
     <br><br>
